--- a/bigproject.html
+++ b/bigproject.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>Big Project</title>
 </head>
-<body background="http://www.astrouw.edu.pl/~pilecki/i_download/
-wallpapers/tile_600x600_7.png">
+<body background= "http://www.zingerbug.com/Backgrounds/background_images/blue_flame_fractal_background_seamless.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
@@ -14,6 +13,7 @@ wallpapers/tile_600x600_7.png">
         <li><a href="todo.html">To Do List</a></li>
         <li><a href="vindinium.html">Vindinium</a></li>
         <li><a href="bigproject.html">Big Project</a></li>
+        <li><a href="howto.html">How To Page</a></li>
     </ul>
 <canvas id="myCanvas" width="500" height="600">
 </canvas>
@@ -23,6 +23,9 @@ wallpapers/tile_600x600_7.png">
 <form><input type=button value="Restart"onClick="window.location.reload()"></form> 
 </div>
 <style>
+boxy{
+    background-size:25%;
+}
 canvas {
     top:250px;
     margin-left:400px;
