--- a/calculator.html
+++ b/calculator.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
 </head>
-<body background="http://www.astrouw.edu.pl/~pilecki/i_download/
-wallpapers/tile_600x600_7.png">
+<body background="http://www.zingerbug.com/Backgrounds/background
+_images/blue_flame_fractal_background_seamless.jpg">
     <center>
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
@@ -15,9 +15,12 @@ wallpapers/tile_600x600_7.png">
         <li><a href="todo.html">To Do List</a></li>
         <li><a href="vindinium.html">Vindinium</a></li>
         <li><a href="bigproject.html">Big Project</a></li>
+        <li><a href="howto.html">How To Page</a></li>
     </ul>
     <style>
-
+    body{
+        background-size:25%;
+    }
     #title{
       text-align:center;
       color:#0072ff;
