--- a/hardware.html
+++ b/hardware.html
@@ -15,7 +15,7 @@
         #hddexplain{
               position:relative;
               left:-5000px;
-              transition:all 1s linear;
+              transition:all 0.3s linear;
         }
         #ram:hover ~ #ramexplain{
         left:0%;
@@ -23,7 +23,7 @@
         #ramexplain{
               position:relative;
               left:-5000px;
-              transition:all 1s linear;
+              transition:all 0.3s linear;
         }
         #gpu:hover ~ #gpuexplain{
         left:0%;
@@ -31,7 +31,7 @@
         #gpuexplain{
               position:relative;
               left:-5000px;
-              transition:all 1s linear;
+              transition:all 0.3s linear;
         }
         #cpu:hover ~ #cpuexplain{
         left:0%;
@@ -39,7 +39,7 @@
         #cpuexplain{
               position:relative;
               left:-5000px;
-              transition:all 1s linear;
+              transition:all 0.3s linear;
         }
                 #motherboard:hover ~ #motherboardexplain{
         left:0%;
@@ -47,7 +47,7 @@
         #motherboardexplain{
               position:relative;
               left:-5000px;
-              transition:all 1s linear;
+              transition:all 0.3s linear;
         }
   
     </style>
@@ -61,6 +61,7 @@
         <li><a href="todo.html">To Do List</a></li>
         <li><a href="vindinium.html">Vindinium</a></li>
         <li><a href="bigproject.html">Big Project</a></li>
+        <li><a href="howto.html">How To Page</a></li>
     </ul>
     <center>
     <h3>Hardware!</h3>
