--- a/todo.html
+++ b/todo.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>Todo List</title>
 </head>
-<body background="http://www.astrouw.edu.pl/~pilecki/i_download/
-wallpapers/tile_600x600_7.png">
+<body background="http://www.zingerbug.com/Backgrounds/background
+_images/blue_flame_fractal_background_seamless.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
@@ -14,6 +14,7 @@ wallpapers/tile_600x600_7.png">
         <li><a href="todo.html">To Do List</a></li>
         <li><a href="vindinium.html">Vindinium</a></li>
         <li><a href="bigproject.html">Big Project</a></li>
+        <li><a href="howto.html">How To Page</a></li>
     </ul>
   <style>
     #bar{
@@ -33,12 +34,12 @@ wallpapers/tile_600x600_7.png">
     }
     body{
         color:#0072ff;
+        background-size:25%;
     }
     #todolist{
       font-size:1.5em;
     }
   </style>
-  
   <header><h1 id="title"> To Do List</h1></header>
     <form id="myform">
       <div id="bar">
@@ -50,6 +51,7 @@ wallpapers/tile_600x600_7.png">
         <option value="red">red</option>
         <option value="italics">italics</option>
         <option value="bold">bold</option>
+        
     </select>
         <input type="submit" />
       </div>
