--- a/vindinium.html
+++ b/vindinium.html
@@ -4,9 +4,13 @@
     <link rel="stylesheet" href="navbar.css" type="text/css"/>
     <meta charset="UTF-8">
     <title>Vindinium Page</title>
+    <style>
+        body{
+            background-size:25%;
+        }
+    </style>
 </head>
-<body background="http://www.astrouw.edu.pl/~pilecki/i_download/
-wallpapers/tile_600x600_7.png">
+<body background="http://www.zingerbug.com/Backgrounds/background_images/blue_flame_fractal_background_seamless.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
@@ -14,7 +18,7 @@ wallpapers/tile_600x600_7.png">
         <li><a href="todo.html">To Do List</a></li>
         <li><a href="vindinium.html">Vindinium</a></li>
         <li><a href="bigproject.html">Big Project</a></li>
+        <li><a href="howto.html">How To Page</a></li>
     </ul>
-    
 </body>
 </html>
