--- a/hardware.html
+++ b/hardware.html
@@ -16,6 +16,7 @@
               position:relative;
               left:-5000px;
               transition:all 0.3s linear;
+              background-color:rgba(0,0,0,0.7);
         }
         #ram:hover ~ #ramexplain{
         left:0%;
@@ -24,6 +25,7 @@
               position:relative;
               left:-5000px;
               transition:all 0.3s linear;
+              background-color:rgba(0,0,0,0.7);
         }
         #gpu:hover ~ #gpuexplain{
         left:0%;
@@ -32,6 +34,7 @@
               position:relative;
               left:-5000px;
               transition:all 0.3s linear;
+              background-color:rgba(0,0,0,0.7);
         }
         #cpu:hover ~ #cpuexplain{
         left:0%;
@@ -40,16 +43,23 @@
               position:relative;
               left:-5000px;
               transition:all 0.3s linear;
+              background-color:rgba(0,0,0,0.7);
         }
-                #motherboard:hover ~ #motherboardexplain{
+        #motherboard:hover ~ #motherboardexplain{
         left:0%;
         } 
         #motherboardexplain{
               position:relative;
               left:-5000px;
               transition:all 0.3s linear;
+              background-color:rgba(0,0,0,0.7);
         }
-  
+        #hardwareis{
+            background-color:rgba(0,0,0,0.7);
+        }
+        #topic{
+            background-color:rgba(0,0,0,0.7);
+        }
     </style>
 </head>
 <center>
@@ -64,7 +74,7 @@
         <li><a href="howto.html">How To Page</a></li>
     </ul>
     <center>
-    <h3>Hardware!</h3>
+    <h3 id="topic">Hardware!</h3>
     <p id="hardwareis"> Hardware is all of the things inside of your computer that make
     it able to do all of <br> the amazing things that it does. There area
     There are 5 essentials when it comes to<br> hardware, there are 
