--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         #welcome{
             color:#0072ff;
             margin:0;
+            background-color:rgba(0,0,0,0.7);
         }
         #descriptiontitle{
             font-size:2em;
             color:#0072ff;
+            background-color:rgba(0,0,0,0.7);
         }
         #description{
             color:#0072ff;
