--- a/interval1howto.html
+++ b/interval1howto.html
@@ -1,11 +1,86 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="navbar.css" type="text/css"/>
+    <style>
+        body{
+            text-align:center;
+            background-size:25%;
+        }
+        #welcome{
+            color:#0072ff;
+            margin:0;
+        }
+        #descriptiontitle{
+            font-size:2em;
+            color:#0072ff;
+        }
+        #description{
+            color:#0072ff;
+            text-decoration:bold;
+            font-size:1.1em;
+            font:sans-serif;
+            margin:0;
+            max-width:750px;
+            padding:0 25%;
+            text-indent:40px;
+        }
+        #description span{
+            background-color:rgba(0,0,0,0.7);
+        }
+        body{
+        background-size:25%;
+        color:#0072ff;
+        text-align:center;
+    }
+    #header{
+        background-color:rgba(0,0,0,0.7);
+    }
+    #shiftexplain{
+        background-color:rgba(0,0,0,0.7);
+    }
+    #explanation{
+        background-color:rgba(0,0,0,0.7);
+    }
+    #navbarexplain{
+        background-color:rgba(0,0,0,0.7);
+    }
+    </style>
     <meta charset="UTF-8">
-    <title>How To Page</title>
+    <title>Interval 1 How To Page</title>
 </head>
-
-<body>
-    
+<body background="http://www.zingerbug.com/Backgrounds/background_images/blue_flame_fractal_background_seamless.jpg">
+    <ul id="navbar">
+        <li><a href="index.html">Home Page</a></li>
+        <li><a href="hardware.html">Hardware</a></li>
+        <li><a href="calculator.html">Calculator</a></li>
+        <li><a href="todo.html">To Do List</a></li>
+        <li><a href="vindinium.html">Vindinium</a></li>
+        <li><a href="bigproject.html">Big Project</a></li>
+        <li><a href="howto.html">How To Page</a></li>
+    </ul>
+   <h1 id="header">How it Works</h1>
+   <img src="Navbar.png"style="width:450px;">
+   <p id="navbarexplain">This is the code for the
+   nav bar that is on the top of this page. it is
+   just a list of hyper links that connect each<br> of the pages
+   there is some styling for the navbar that is 
+   not shown in this code but this code is what allows
+   the navbar to function.</p>
+<img src="HardwareInfo.png"style="height:350px;">;   
+<p id="explanation">This image shows the information 
+that is presented in the webpage without the
+shift that there is on the website.<br> the text 
+written here appears on the website only under
+certain circumstances which is explained by
+by the following image.</p>
+<img src="hardwareshift.png"style="width:300px;">
+<p id="shiftexplain"> This part of the code 
+keeps the text shifted off the left margin
+and looks for the mouse to be set ontop of the 
+computer component<br>names and once the mouse is set 
+ontop of the text is shifts over the description 
+about what that part does and allows you to 
+read it.</p>
 </body>
 </html>
