final update int3

--- a/calculator.html
+++ b/calculator.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>Calculator</title>
 </head>
-<body background="http://www.zingerbug.com/Backgrounds/background
-_images/blue_flame_fractal_background_seamless.jpg">
+<body background="CompSciBackground.jpg">
     <center>
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
