--- a/hardware.html
+++ b/hardware.html
@@ -63,7 +63,7 @@
     </style>
 </head>
 <center>
-<body background="http://www.zingerbug.com/Backgrounds/background_images/blue_flame_fractal_background_seamless.jpg">
+<body background="CompSciBackground.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
