--- a/bigproject.html
+++ b/bigproject.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Big Project</title>
 </head>
-<body background= "http://www.zingerbug.com/Backgrounds/background_images/blue_flame_fractal_background_seamless.jpg">
+<body background="CompSciBackground.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
