--- a/howto.html
+++ b/howto.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="navbar.css" type="text/css"/>
+    <link rel="stylesheet" href="navbar.css" type="text/css" />
     <meta charset="UTF-8">
     <title>How it works</title>
 </head>
-<body background="http://www.zingerbug.com/Backgrounds/background
-_images/blue_flame_fractal_background_seamless.jpg">
+
+<body background="CompSciBackground.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
@@ -17,18 +18,19 @@ _images/blue_flame_fractal_background_seamless.jpg">
         <li><a href="howto.html">How To Page</a></li>
     </ul>
     <style>
-    body{
-        background-size:25%;
-        color:#0072ff;
-        text-align:center;
-    }
-    .navbar{
-        text-align:center;
-    }
+        body {
+            background-size: 25%;
+            color: #0072ff;
+            text-align: center;
+        }
+        
+        .navbar {
+            text-align: center;
+        }
     </style>
-    <h1><a href="interval1howto.html">Interval 1 how to page</a></h1>
-    <h1><a href="interval2howto.html">Interval 2 how to page</a></h1>
-    <h1><a href="interval3howto.html">Interval 3 how to page</a></h1>
-    <h1><a href="interval4howto.html">Interval 4 how to page</a></h1>
+    <h1><a href="interval1howto.html">How does the Navbar/Hardware Page Work?</a></h1>
+    <h1><a href="interval2howto.html">How does the Todo list work?</a></h1>
+    <h1><a href="interval4howto.html">How does the Big Project Work?</a></h1>
 </body>
+
 </html>
