--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="navbar.css" type="text/css"/>
     <title>About Me</title>
 </head>
-<body background="http://www.zingerbug.com/Backgrounds/background_images/blue_flame_fractal_background_seamless.jpg">
+<body background="http://www.designyourway.net/diverse/darkpat/COLOURlovers.com-Gothic_Wallpaper.jpg">
     
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
