--- a/todo.html
+++ b/todo.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <title>Todo List</title>
 </head>
-<body background="http://www.zingerbug.com/Backgrounds/background
-_images/blue_flame_fractal_background_seamless.jpg">
+<body background="CompSciBackground.jpg">
     <ul id="navbar">
         <li><a href="index.html">Home Page</a></li>
         <li><a href="hardware.html">Hardware</a></li>
