final update int3(updated)

--- a/vindinium.html
+++ b/vindinium.html
@@ -103,7 +103,7 @@
     <center>
         <p id="AIexplain">AI stands for Artificial Intelligence, meaning it has some logic or decision making. <br> What this looks like when it comes to coding is the bot has conditions where it will decide what is the best thing to do.<br> An example of this is where
             my code looks like the following:<br><br> if (bot.yourBot.life
-            <=7 0 & bot.yourBot.gold> 3) {<br> task = "tavern";<br> }
+            <=70 & bot.yourBot.gold> 3) {<br> task = "tavern";<br> }
                 <br><br> This code is checking for when my bots health is less than 70 and aslong as I have more than 3 gold it will set
                 <br> my task to tavern which later my bot checks what the task is set to and acts based on what its task is set to. <br> ____________________________________________________________________________________
         </p>
