--- a/interval4howto.html
+++ b/interval4howto.html
@@ -11,6 +11,14 @@
             color:#0072ff;
             margin:0;
         }
+        #header{
+            color:#0072ff;
+            background-color:rgba(0,0,0,0.7);
+        }
+        #enemyMovement{
+            color:#0072ff;
+            background-color:rgba(0,0,0,0.7);
+        }
     </style>
     <meta charset="UTF-8">
     <title>Big Project How To Page</title>
@@ -25,5 +33,18 @@
         <li><a href="bigproject.html">Big Project</a></li>
         <li><a href="howto.html">How To Page</a></li>
     </ul>
+    <h1 id="header"> Big Project</h1>
+    <img src="EnemyBots.png"style="height:500px;">;
+    <p id="enemyMovement">This is the javascript that 
+    looks the players points to determine how fast and 
+    the direction that the enemies should be moving.
+    It checks to see if my player has more than x amount
+    of points and then sets the enemies speed to be quicker and 
+    quicker to make the game slightly more challenging over time. It also
+    adds and subtracts the x value of some of the bots by 0.1 which makes it 
+    move at a slant instead of moving directly down at the player which adds 
+    dificulty.
+    </p>
+    
 </body>
 </html>
