--- a/interval4howto.html
+++ b/interval4howto.html
@@ -38,10 +38,10 @@
     <p id="enemyMovement">This is the javascript that 
     looks the players points to determine how fast and 
     the direction that the enemies should be moving.
-    It checks to see if my player has more than x amount
+    It checks to see if my player has more than <br> x amount
     of points and then sets the enemies speed to be quicker and 
     quicker to make the game slightly more challenging over time. It also
-    adds and subtracts the x value of some of the bots by 0.1 which makes it 
+    adds and subtracts the x value of some of the bots by 0.1 <br>which makes it 
     move at a slant instead of moving directly down at the player which adds 
     dificulty.
     </p>
